# myfrappe

./: .env.example  .gitignore  Dockerfile.custom  frappe_docker_v16.yml
apps/personal_blog/: README.md  pyproject.toml
apps/personal_blog/frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
apps/personal_blog/frontend/src/: App.vue  index.css  main.js
apps/personal_blog/frontend/src/components/: CommentSection.vue  Pagination.vue  PostCard.vue  PostCardSkeleton.vue  index.js
apps/personal_blog/frontend/src/components/layout/: BlogLayout.vue
apps/personal_blog/frontend/src/composables/: index.js  useApi.js  useErrorHandler.js  useTheme.js
apps/personal_blog/frontend/src/router/: index.js
apps/personal_blog/frontend/src/views/: Categories.vue  Category.vue  Home.vue  PostDetail.vue  Tag.vue  Tags.vue
apps/personal_blog/personal_blog/: exceptions.py  hooks.py
apps/personal_blog/personal_blog/api/: __init__.py  category.py  comment.py  post.py  tag.py
apps/personal_blog/personal_blog/blog/doctype/blog_category/: __init__.py  blog_category.json  blog_category.py
apps/personal_blog/personal_blog/blog/doctype/blog_comment/: blog_comment.json  blog_comment.py
apps/personal_blog/personal_blog/blog/doctype/blog_post/: blog_post.json  (+1 more)
apps/personal_blog/personal_blog/public/: .gitkeep
apps/personal_blog/personal_blog/public/frontend/: index.html
apps/personal_blog/personal_blog/templates/pages/: blog.html
apps/personal_blog/personal_blog/utils/: slug.py
apps/personal_blog/personal_blog/www/: blog.html  blog.py
(+85 files in other folders)
